general page clean up.

--- a/app/views/episodes/index.html.erb
+++ b/app/views/episodes/index.html.erb
@@ -1,4 +1,4 @@
-<div class="col-sm-12 col-md-8" id="content-container">
+<div class="col-md-4" id="content-container">
 
   <h3 class="title-spacing index-alignment" style="margin-bottom:30px;">EPISODES<span style="font-size:17px;letter-spacing:4px;">S-01</span></h3>
 
@@ -10,7 +10,7 @@
         <%= episode.title %>
       </h3>
 
-      <p class="index-alignment"><%= episode.description %></p>
+      <p class="description"><%= episode.description %></p>
       <br>
       <br>
     <% end %>
