--- a/app/views/pages/subscribe.html.erb
+++ b/app/views/pages/subscribe.html.erb
@@ -1,5 +1,6 @@
 
-<div class="col-sm-12 col-md-8" id="content-container">
+<div class="col-md-4 subscribe" id="content-container">
+
 
   <h3 class="title-spacing index-alignment"
       style="margin-bottom:45px;">SUBSCRIBE</h3>
