--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,6 +20,11 @@ body {
   letter-spacing: 3px;
   padding:0px 30px 0px 30px;
 }
+
+a, a:hover {
+  color: white;
+}
+
 h4 {
   color: #ffffff;
   font-size: 16px;
@@ -240,6 +245,23 @@ a:hover {
     width: 300px;
   }
 
+  .about, .contact, .subscribe, .description {
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .about, .subscribe {
+    max-width: 450px;
+  }
+  .contact {
+    max-width: 250px;
+  }
+
+  .description{
+    max-width: 300px;
+  }
+
+
+
 }
 
 
@@ -342,4 +364,7 @@ a:hover {
 
 .description-container {
 
+}
+
+.subscribe {
 }
