--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,6 +1,4 @@
-
-<div class="col-sm-8" id="content-container">
-
+<div class="col-md-4" id="content-container">
   <p id="notice"><%= notice %></p>
 
   <h1>Listing Events</h1>
