--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,4 +1,4 @@
-<div class="col-sm-12 col-md-8" id="content-container">
+<div class="col-md-4 about" id="content-container">
   <h3 class="title-spacing index-alignment"
       style="margin-bottom:45px;">ABOUT</h3>
   <p>
