--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,4 +1,4 @@
-<div class="col-sm-12 col-md-8" id="content-container">
+<div class="col-md-4 contact" id="content-container">
   <h3 class="title-spacing index-alignment"
       style="margin-bottom:45px;">CONTACT</h3>
   <p>
