--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -1,7 +1,9 @@
 // Place all the styles related to the Pages controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-.recent-spotlight, .recent-spacing, .recent {
+
+.neg-margin {
+  margin-top: -37px;
 }
 
 .recent-container {
