--- a/app/views/episodes/show.html.erb
+++ b/app/views/episodes/show.html.erb
@@ -1,3 +1,6 @@
+<div class="col-md-4" id="content-container">
+  <%= print params[:page] %>
+
   <h3 class="show-title title-spacing index-alignment"><%= @episode.title %></h3>
     <div class="index-alignment">
       <%= image_tag(@episode.image.url(:medium)) %>
@@ -37,8 +40,6 @@
     </div>
 
   <div class="description-container">
-
-
     <a href="<%= @episode.mp3 %>">Download</a>
     <p>
       <%= @episode.description %>
@@ -47,10 +48,9 @@
     <p>
       MUSIC/SHOW CREDITS
     </p>
-
   </div>
 
-
+</div>
 
 
 <script type="text/javascript">
