--- a/app/views/pages/recent.html.erb
+++ b/app/views/pages/recent.html.erb
@@ -3,11 +3,13 @@
 <% end %>
 
 
-<div class="col-sm-12" id="content-container">
+<div class="col-sm-12"
+ id="content-container"
+ style="padding-top:-15px;">
   <h3 class="title-spacing index-alignment"
-      style="margin-bottom:30px;
-              margin-top:-17px;">MOST RECENT
+      style="margin-bottom:30px;">MOST RECENT
   </h3>
+
 
   <div class="recent-container">
     <div class="recent-spotlight">
