--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -105,6 +105,8 @@ h4 {
   margin-right: auto;
   text-align: center;
   margin-bottom: 20px;
+  margin-top: 20px;
+  margin-left: 0px;
 }
 
 .container-fluid {
@@ -268,7 +270,7 @@ a:hover {
 
 #social-mobile {
   border-bottom: 1px solid white;
-  width: 230px;
+  width: 204px;
   text-align: center;
   margin-left: auto;
   margin-right: auto;
@@ -286,14 +288,6 @@ a:hover {
   cursor: pointer;
   z-index: 800;
   background-color: #231F20;
-}
-
-.dropbtn-recent {
-
-}
-
-@media (max-width: 991px){
-
 }
 
 .dropdown-button-container{
