--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -13,17 +13,17 @@
 
   <div class="field">
     <%= f.label :title %><br>
-    <%= f.text_field :title %>
+    <%= f.text_field :title, class: "button-color" %>
   </div>
   <div class="field">
     <%= f.label :body %><br>
-    <%= f.text_field :body %>
+    <%= f.text_field :body, class: "button-color" %>
   </div>
   <div class="field">
     <%= f.label :image %><br>
-    <%= f.text_field :image %>
+    <%= f.text_field :image, class: "button-color" %>
   </div>
-  <div class="actions">
+  <div class="actions button-color">
     <%= f.submit %>
   </div>
 <% end %>
