--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -145,6 +145,10 @@
       </div>
     <% end %>
 
+    <% if user_signed_in? %>
+      <%= link_to('Logout', destroy_user_session_path, :method => :delete) %>
+    <% end %>
+
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
   </body>
